syntax = "proto3";
package emissions.v9;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "emissions/v9/inputreputer.proto";
import "emissions/v9/inputworker.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/allora-network/allora-chain/x/emissions/types";

// Msg defines the module Msg service.
service MsgService {
  option (cosmos.msg.v1.service) = true;

  rpc UpdateParams(UpdateParamsRequest) returns (UpdateParamsResponse);

  rpc CreateNewTopic(CreateNewTopicRequest) returns (CreateNewTopicResponse);

  rpc Register(RegisterRequest) returns (RegisterResponse);

  rpc RemoveRegistration(RemoveRegistrationRequest) returns (RemoveRegistrationResponse);

  rpc AddStake(AddStakeRequest) returns (AddStakeResponse);

  rpc RemoveStake(RemoveStakeRequest) returns (RemoveStakeResponse);

  rpc CancelRemoveStake(CancelRemoveStakeRequest) returns (CancelRemoveStakeResponse);

  rpc DelegateStake(DelegateStakeRequest) returns (DelegateStakeResponse);

  rpc RewardDelegateStake(RewardDelegateStakeRequest) returns (RewardDelegateStakeResponse);

  rpc RemoveDelegateStake(RemoveDelegateStakeRequest) returns (RemoveDelegateStakeResponse);

  rpc CancelRemoveDelegateStake(CancelRemoveDelegateStakeRequest) returns (CancelRemoveDelegateStakeResponse);

  rpc FundTopic(FundTopicRequest) returns (FundTopicResponse);

  rpc AddToWhitelistAdmin(AddToWhitelistAdminRequest) returns (AddToWhitelistAdminResponse);

  rpc RemoveFromWhitelistAdmin(RemoveFromWhitelistAdminRequest) returns (RemoveFromWhitelistAdminResponse);

  rpc InsertWorkerPayload(InsertWorkerPayloadRequest) returns (InsertWorkerPayloadResponse);

  rpc InsertReputerPayload(InsertReputerPayloadRequest) returns (InsertReputerPayloadResponse);

  rpc AddToGlobalWhitelist(AddToGlobalWhitelistRequest) returns (AddToGlobalWhitelistResponse);

  rpc RemoveFromGlobalWhitelist(RemoveFromGlobalWhitelistRequest) returns (RemoveFromGlobalWhitelistResponse);

  rpc AddToGlobalWorkerWhitelist(AddToGlobalWorkerWhitelistRequest) returns (AddToGlobalWorkerWhitelistResponse);

  rpc RemoveFromGlobalWorkerWhitelist(RemoveFromGlobalWorkerWhitelistRequest) returns (RemoveFromGlobalWorkerWhitelistResponse);

  rpc AddToGlobalReputerWhitelist(AddToGlobalReputerWhitelistRequest) returns (AddToGlobalReputerWhitelistResponse);

  rpc RemoveFromGlobalReputerWhitelist(RemoveFromGlobalReputerWhitelistRequest) returns (RemoveFromGlobalReputerWhitelistResponse);

  rpc AddToGlobalAdminWhitelist(AddToGlobalAdminWhitelistRequest) returns (AddToGlobalAdminWhitelistResponse);

  rpc RemoveFromGlobalAdminWhitelist(RemoveFromGlobalAdminWhitelistRequest) returns (RemoveFromGlobalAdminWhitelistResponse);

  rpc BulkAddToGlobalWorkerWhitelist(BulkAddToGlobalWorkerWhitelistRequest) returns (BulkAddToGlobalWorkerWhitelistResponse);

  rpc BulkRemoveFromGlobalWorkerWhitelist(BulkRemoveFromGlobalWorkerWhitelistRequest) returns (BulkRemoveFromGlobalWorkerWhitelistResponse);

  rpc BulkAddToGlobalReputerWhitelist(BulkAddToGlobalReputerWhitelistRequest) returns (BulkAddToGlobalReputerWhitelistResponse);

  rpc BulkRemoveFromGlobalReputerWhitelist(BulkRemoveFromGlobalReputerWhitelistRequest) returns (BulkRemoveFromGlobalReputerWhitelistResponse);

  rpc BulkAddToTopicWorkerWhitelist(BulkAddToTopicWorkerWhitelistRequest) returns (BulkAddToTopicWorkerWhitelistResponse);

  rpc BulkRemoveFromTopicWorkerWhitelist(BulkRemoveFromTopicWorkerWhitelistRequest) returns (BulkRemoveFromTopicWorkerWhitelistResponse);

  rpc BulkAddToTopicReputerWhitelist(BulkAddToTopicReputerWhitelistRequest) returns (BulkAddToTopicReputerWhitelistResponse);

  rpc BulkRemoveFromTopicReputerWhitelist(BulkRemoveFromTopicReputerWhitelistRequest) returns (BulkRemoveFromTopicReputerWhitelistResponse);

  rpc EnableTopicWorkerWhitelist(EnableTopicWorkerWhitelistRequest) returns (EnableTopicWorkerWhitelistResponse);

  rpc DisableTopicWorkerWhitelist(DisableTopicWorkerWhitelistRequest) returns (DisableTopicWorkerWhitelistResponse);

  rpc EnableTopicReputerWhitelist(EnableTopicReputerWhitelistRequest) returns (EnableTopicReputerWhitelistResponse);

  rpc DisableTopicReputerWhitelist(DisableTopicReputerWhitelistRequest) returns (DisableTopicReputerWhitelistResponse);

  rpc AddToTopicCreatorWhitelist(AddToTopicCreatorWhitelistRequest) returns (AddToTopicCreatorWhitelistResponse);

  rpc RemoveFromTopicCreatorWhitelist(RemoveFromTopicCreatorWhitelistRequest) returns (RemoveFromTopicCreatorWhitelistResponse);

  rpc AddToTopicWorkerWhitelist(AddToTopicWorkerWhitelistRequest) returns (AddToTopicWorkerWhitelistResponse);

  rpc RemoveFromTopicWorkerWhitelist(RemoveFromTopicWorkerWhitelistRequest) returns (RemoveFromTopicWorkerWhitelistResponse);

  rpc AddToTopicReputerWhitelist(AddToTopicReputerWhitelistRequest) returns (AddToTopicReputerWhitelistResponse);

  rpc RemoveFromTopicReputerWhitelist(RemoveFromTopicReputerWhitelistRequest) returns (RemoveFromTopicReputerWhitelistResponse);
}

/// PARAMS

// Because gocosmos, grpc-gateway, and go-pulsar do not support optional fields
// and including google themselves
// https://cloud.google.com/apis/design/design_patterns.md#optional_primitive_fields
// we instead use a repeated field with a single element to represent an
// optional field and if the repeated field is empty, it is considered to be the
// same as if the field was not set
message OptionalParams {
  reserved 4, 26, 27, 39, 41;
  reserved "max_topics_per_block", "min_effective_topic_revenue", "max_retries_to_fulfil_nonces_worker", "topic_fee_revenue_decay_rate", "max_retries_to_fulfil_nonces_reputer";

  repeated string version = 1;
  repeated int64 max_serialized_msg_length = 2;
  repeated string min_topic_weight = 3 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string required_minimum_stake = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated int64 remove_stake_delay_window = 6;
  repeated int64 min_epoch_length = 7;
  repeated string beta_entropy = 8 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string learning_rate = 9 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string max_gradient_threshold = 10 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string min_stake_fraction = 11 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated uint64 max_unfulfilled_worker_requests = 13;
  repeated uint64 max_unfulfilled_reputer_requests = 14;
  repeated string topic_reward_stake_importance = 15 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string topic_reward_fee_revenue_importance = 16 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string topic_reward_alpha = 17 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string task_reward_alpha = 18 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string validators_vs_allora_percent_reward = 19 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated uint64 max_samples_to_scale_scores = 20;
  repeated uint64 max_top_inferers_to_reward = 21;
  repeated uint64 max_top_forecasters_to_reward = 22;
  repeated uint64 max_top_reputers_to_reward = 23;
  repeated string create_topic_fee = 24 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated uint64 gradient_descent_max_iters = 25;
  repeated string registration_fee = 28 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated uint64 default_page_limit = 29;
  repeated uint64 max_page_limit = 30;
  repeated int64 min_epoch_length_record_limit = 31;
  repeated uint64 blocks_per_month = 32;
  repeated string p_reward_inference = 33 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string p_reward_forecast = 34 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string p_reward_reputer = 35 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string c_reward_inference = 36 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string c_reward_forecast = 37 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string c_norm = 38 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string epsilon_reputer = 40 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated uint64 half_max_process_stake_removals_end_block = 42;
  repeated string data_sending_fee = 43 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated string epsilon_safe_div = 44 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated uint64 max_elements_per_forecast = 45;
  repeated uint64 max_active_topics_per_block = 46;
  repeated uint64 max_string_length = 47;
  repeated string initial_regret_quantile = 48 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string p_norm_safe_div = 49 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated bool global_whitelist_enabled = 50 [(amino.dont_omitempty) = true];
  repeated bool topic_creator_whitelist_enabled = 51 [(amino.dont_omitempty) = true];
  repeated uint64 min_experienced_worker_regrets = 52;
  repeated string inference_outlier_detection_threshold = 53 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string inference_outlier_detection_alpha = 54 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated string lambda_initial_score = 55 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  repeated bool global_worker_whitelist_enabled = 56 [(amino.dont_omitempty) = true];
  repeated bool global_reputer_whitelist_enabled = 57 [(amino.dont_omitempty) = true];
  repeated bool global_admin_whitelist_appended = 58 [(amino.dont_omitempty) = true];
  repeated uint64 max_whitelist_input_array_length = 59 [(amino.dont_omitempty) = true];
  repeated string min_weight_threshold_for_stdnorm = 60 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
}

message UpdateParamsRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  OptionalParams params = 2;
}

message UpdateParamsResponse {}

/// TOPICS

message CreateNewTopicRequest {
  reserved 3, 5, 6, 9;
  reserved "loss_logic", "inference_logic", "inference_method", "default_arg";

  option (cosmos.msg.v1.signer) = "creator";

  // creator is the message sender.
  string creator = 1;
  string metadata = 2;
  string loss_method = 4;
  int64 epoch_length = 7;
  int64 ground_truth_lag = 8;
  string p_norm = 10 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  string alpha_regret = 11 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  bool allow_negative = 12;
  string epsilon = 13 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  int64 worker_submission_window = 14;
  string merit_sortition_alpha = 15 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  string active_inferer_quantile = 16 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  string active_forecaster_quantile = 17 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  string active_reputer_quantile = 18 [
    (gogoproto.customtype) = "github.com/allora-network/allora-chain/math.Dec",
    (gogoproto.nullable) = false
  ];
  bool enable_worker_whitelist = 19;
  bool enable_reputer_whitelist = 20;
}

message CreateNewTopicResponse {
  uint64 topic_id = 1;
}

/// Worker and Reputer Interface

message InsertReputerPayloadRequest {
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  InputReputerValueBundle reputer_value_bundle = 2;
}

message InsertReputerPayloadResponse {}

message InsertWorkerPayloadRequest {
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  InputWorkerDataBundle worker_data_bundle = 2;
}

message InsertWorkerPayloadResponse {}
///  Inference Node Registration

message RegisterRequest {
  reserved 2, 3;
  reserved "lib_p2p_key", "multi_address";

  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  uint64 topic_id = 4;
  string owner = 5;
  bool is_reputer = 6;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

message RemoveRegistrationRequest {
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  uint64 topic_id = 2;
  bool is_reputer = 3;
}

message RemoveRegistrationResponse {
  bool success = 1;
  string message = 2;
}

///  Staking

message AddStakeRequest {
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  uint64 topic_id = 2;
  string amount = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message AddStakeResponse {}

message RemoveStakeRequest {
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  uint64 topic_id = 2;
  string amount = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message RemoveStakeResponse {}

message CancelRemoveStakeRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
}

message CancelRemoveStakeResponse {}

message DelegateStakeRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
  string reputer = 3;
  string amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message DelegateStakeResponse {}

message RemoveDelegateStakeRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string reputer = 2;
  uint64 topic_id = 3;
  string amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message RemoveDelegateStakeResponse {}

message CancelRemoveDelegateStakeRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
  string delegator = 3;
  string reputer = 4;
}

message CancelRemoveDelegateStakeResponse {}

message RewardDelegateStakeRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
  string reputer = 3;
}

message RewardDelegateStakeResponse {}

// Inferences are requested by consumers who fund topics by sending ALLO to
// ecosystem account via TopicFund messages
message FundTopicRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
  string amount = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ]; // how many funds to send from alice with this Inference Request
}

message FundTopicResponse {}

///  Whitelist

message AddToWhitelistAdminRequest {
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  string address = 2;
}

message AddToWhitelistAdminResponse {}

message RemoveFromWhitelistAdminRequest {
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  string address = 2;
}

message RemoveFromWhitelistAdminResponse {}

message EnableTopicWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
}

message EnableTopicWorkerWhitelistResponse {}

message DisableTopicWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
}

message DisableTopicWorkerWhitelistResponse {}

message EnableTopicReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
}

message EnableTopicReputerWhitelistResponse {}

message DisableTopicReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  uint64 topic_id = 2;
}

message DisableTopicReputerWhitelistResponse {}

message AddToGlobalWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message AddToGlobalWhitelistResponse {}

message RemoveFromGlobalWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message RemoveFromGlobalWhitelistResponse {}

message AddToTopicCreatorWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message AddToTopicCreatorWhitelistResponse {}

message AddToGlobalWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message AddToGlobalWorkerWhitelistResponse {}

message RemoveFromGlobalWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message RemoveFromGlobalWorkerWhitelistResponse {}

message AddToGlobalReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message AddToGlobalReputerWhitelistResponse {}

message RemoveFromGlobalReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message RemoveFromGlobalReputerWhitelistResponse {}

message AddToGlobalAdminWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message AddToGlobalAdminWhitelistResponse {}

message RemoveFromGlobalAdminWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message RemoveFromGlobalAdminWhitelistResponse {}

message BulkAddToGlobalWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  repeated string addresses = 2;
}

message BulkAddToGlobalWorkerWhitelistResponse {}

message BulkRemoveFromGlobalWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  repeated string addresses = 2;
}

message BulkRemoveFromGlobalWorkerWhitelistResponse {}

message BulkAddToGlobalReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  repeated string addresses = 2;
}

message BulkAddToGlobalReputerWhitelistResponse {}

message BulkRemoveFromGlobalReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  repeated string addresses = 2;
}

message BulkRemoveFromGlobalReputerWhitelistResponse {}

message BulkAddToTopicWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  repeated string addresses = 2;
  uint64 topic_id = 3;
}

message BulkAddToTopicWorkerWhitelistResponse {}

message BulkRemoveFromTopicWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  repeated string addresses = 2;
  uint64 topic_id = 3;
}

message BulkRemoveFromTopicWorkerWhitelistResponse {}

message BulkAddToTopicReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  repeated string addresses = 2;
  uint64 topic_id = 3;
}

message BulkAddToTopicReputerWhitelistResponse {}

message BulkRemoveFromTopicReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  repeated string addresses = 2;
  uint64 topic_id = 3;
}

message BulkRemoveFromTopicReputerWhitelistResponse {}

message RemoveFromTopicCreatorWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
}

message RemoveFromTopicCreatorWhitelistResponse {}

message AddToTopicWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
  uint64 topic_id = 3;
}

message AddToTopicWorkerWhitelistResponse {}

message RemoveFromTopicWorkerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
  uint64 topic_id = 3;
}

message RemoveFromTopicWorkerWhitelistResponse {}

message AddToTopicReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
  uint64 topic_id = 3;
}

message AddToTopicReputerWhitelistResponse {}

message RemoveFromTopicReputerWhitelistRequest {
  option (cosmos.msg.v1.signer) = "sender";
  string sender = 1;
  string address = 2;
  uint64 topic_id = 3;
}

message RemoveFromTopicReputerWhitelistResponse {}
